# QDraw

./: Actions.qml  CMakeLists.txt  Content.qml  Content_BACKUP_14746.qml  Content_REMOTE_14746.qml  Dialogs.qml  README.md  Window.qml  draw.js  images.qrc  main.cpp
qml/: Canvas.qml  ColorPicker.qml  MainWindow.qml  ToolPanel.qml  constants.js
